<resources>
    <string name="app_name">Nhạc</string>
    <string name="action_search">Search </string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="search_for_songs">Search  for  songs  ,   playlists  and  artists  ,album  ,singer  </string>
    <string name="favourite">Favourite</string>
    <string name="dunglv">dungLv</string>
    <string name="dung">dung</string>
    <string name="play_randomly">Play randomly</string>
    <string name="hay_trao_cho_anh">Hay trao cho anh</string>
    <string name="play_later">Play later</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="over_time_add">Over time add</string>
    <string name="theo_th_i_gian">By the time </string>
    <string name="by_name_A_Z">By name A->Z</string>
    <string name="by_name_Z_A">By name Z->A </string>
    <string name="theo_s_l_n_ph_t">According to the number of plays</string>
    <string name="arrange_songs">Arrange songs</string>
    <string name="name">name</string>
    <string name="_00_00">00:00</string>
    <string name="playlist">Playlist</string>
    <string name="dung_dang_cap">Dung dang cap</string>
    <string name="create_playlists">Create playlists </string>
    <string name="add_playlists">Add playlists </string>
    <string name="no_data">No data</string>
    <string name="day">Day</string>
    <string name="playlist_name">Playlist name</string>
    <string name="enter_a_playlist_name">Enter a playlist name</string>
    <string name="list_1">Play List 1</string>
    <string name="playlist_is_repeated">Playlist is repeated</string>
    <string name="the_song_is_repeated">The song is repeated</string>
    <string name="play_songs_randomly">Play songs randomly </string>

    <string name="share_to">Share to</string>
    <string name="ok">OK</string>
    <string name="_0_selected_item">0selected item</string>
    <string name="selected_item"> selected item</string>
    <string name="Delete_the_selected_song">Delete the selected song.Grant the required permissions to delete</string>
    <string name="close">Close</string>
    <string name="_01">01</string>

    <style name="TabLayoutTextStyle">
        <item name="android:textSize">16sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:fontFamily">@font/medium</item>
    </style>

    <string name="singer">Singer</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="folder">Folder</string>
    <string name="add_songs">Add songs</string>
    <string name="on_the_machine"> On the machine</string>
    <string name="recently">Recently</string>
    <string name="th_m_v_o_danh_s_ch1">Added to the list</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="namePlayListTrung">Playlist name overlaps with another playlist name, please re-enter</string>
    <string name="namePlayListNUll">Empty playlist name, please re-enter</string>
    <string name="current_album_cover">Current album cover</string>
    <string name="earphone">Earphone</string>
    <string name="x_a_kh_i_danh_s_ch">Delete from list</string>
    <string name="go">Go</string>
    <string name="audio">Audio</string>
    <string name="notification">Notification</string>
    <string name="the_music_app_requires_access_audio_access">The Music app requires access audio access.</string>
    <string name="enable_permissions">Enable permissions</string>
    <string name="to_setting">To setting</string>
    <string name="cancel">Cancel</string>
    <string name="music_app_permissions">Music App requests the following permissions:</string>
    <string name="by_the_name_sing">By the name sing</string>
    <string name="play_list_new">Play list new</string>
    <string name="allow_this_app_to_access_your_audio_and_notification_files">Allow this app to access your audio and notification files.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="language_options">Language options</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share_app">Share app</string>
    <string name="rate_us">Rate us</string>
    <string name="next">next</string>
    <string name="pause">pause</string>
    <string name="previous">previous</string>
    <string name="play">Play</string>

    <string name="france">France</string>
    <string name="english">EnglishS</string>
    <string name="india">India</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="vietnam">VietNames</string>
    <string name="setting">Setting  </string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="name5">We love you too !</string>
    <string name="title54">Thank for your feedback </string>
    <string name="name4"> Great!</string>
    <string name="name3">Good!</string>
    <string name="title321">Please give us some feedback </string>
    <string name="name2">Poor !</string>
    <string name="title1">Thank for your feedback </string>
    <string name="name1">Oh , no!</string>
    <string name="title0">Do you like the app ?</string>
    <string name="name0">Let us know your experience </string>
    <string name="done">Done</string>
    <string name="song_has_been_added_to_favorites">Song has been added to favorites.</string>
    <string name="song_has_been_removed_from_favorites">Song has been removed from favorites.</string>
</resources>