<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:background="@drawable/custom_tv_close"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_20dp"
                android:text="@string/playlist_name"
                android:textColor="#232323"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_phat_sau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:text="@string/enter_a_playlist_name"
                android:textColor="#232323"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_20dp"
                android:background="@null"
                android:fontFamily="@font/medium"
                android:foreground="@drawable/custom_tv_add_play_list"
                android:gravity="left"
                android:paddingVertical="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:text="@string/list_1"
                android:textColor="#232323"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_phat_sau"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@drawable/custom_tv_no"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:foreground="@drawable/custom_ripple_rectangle"
                android:gravity="center"
                android:padding="@dimen/dimen_20dp"
                android:text="@string/cancel"
                android:textColor="#232323"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_yes"
                app:layout_constraintTop_toBottomOf="@id/ed_name" />

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:background="@drawable/custom_tv_yes"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:foreground="@drawable/custom_ripple_rectangle"
                android:gravity="center"
                android:padding="@dimen/dimen_20dp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_no"
                app:layout_constraintLeft_toRightOf="@id/tv_no"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_no"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>