<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:background="@drawable/custom_tv_close">



            <TextView
                android:id="@+id/tv_bia_album_hien_tai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/dimen_5dp"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:gravity="left|center"
                android:paddingVertical="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:text="@string/current_album_cover"
                android:textColor="#232323"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_image"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/dimen_5dp"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:gravity="left|center"
                android:paddingVertical="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:text="@string/share"
                android:textColor="#232323"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_share_pl"
                app:layout_constraintTop_toBottomOf="@id/tv_bia_album_hien_tai"
                tools:ignore="RtlSymmetry"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/dimen_5dp"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:gravity="left|center"
                android:paddingVertical="@dimen/dimen_20dp"

                android:paddingStart="@dimen/dimen_15dp"
                android:text="@string/earphone"
                android:textColor="#232323"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_headphone"
                app:layout_constraintTop_toBottomOf="@id/tv_share"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_rectangle"
                android:clickable="true"
                android:drawablePadding="@dimen/dimen_5dp"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:gravity="left|center"
                android:paddingVertical="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:text="@string/x_a_kh_i_danh_s_ch"
                android:textColor="#232323"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_minus"
                app:layout_constraintTop_toBottomOf="@id/tv_phone"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>