<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#191E2B">

        <TextView
            android:id="@+id/tv_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            app:layout_constraintRight_toRightOf="parent"
            android:maxLines="1"
            android:fontFamily="@font/medium"
            android:text="@string/go"
            android:padding="@dimen/dimen_5dp"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Dung" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_height="@dimen/_170sdp"
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_go"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/ani_per" />

        <TextView
            android:id="@+id/tv_permission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:maxLines="1"
            android:padding="3dp"
            android:text="@string/music_app_permissions"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/animationView"
            app:layout_constraintRight_toRightOf="@id/imAudioPermission"
            app:layout_constraintTop_toBottomOf="@id/animationView"
            tools:ignore="Dung" />

        <TextView
            android:id="@+id/tv_bo_nho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            app:layout_constraintRight_toLeftOf="@id/imAudioPermission"
            android:maxLines="1"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/medium"
            android:padding="3dp"
            android:text="@string/audio"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/animationView"
            app:layout_constraintTop_toBottomOf="@id/tv_permission"
            tools:ignore="Dung" />

        <ImageView
            android:id="@+id/imAudioPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:src="@drawable/ic_off"
            android:layout_marginRight="@dimen/dimen_20dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_bo_nho"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_bo_nho"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_name_thong_bao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            app:layout_constraintRight_toLeftOf="@id/imAudioPermission"
            android:padding="3dp"
            android:maxLines="1"
            android:fontFamily="@font/medium"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:layout_constraintLeft_toLeftOf="@id/animationView"
            app:layout_constraintTop_toBottomOf="@id/imAudioPermission"
            tools:ignore="Dung" />

        <ImageView
            android:id="@+id/imNotificationPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:src="@drawable/ic_off"
            app:layout_constraintBottom_toBottomOf="@id/tv_name_thong_bao"
            app:layout_constraintRight_toRightOf="@id/imAudioPermission"
            app:layout_constraintTop_toTopOf="@id/tv_name_thong_bao" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>