<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dimen_15dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:background="@drawable/custom_tv_permisson"
            android:orientation="vertical"
            tools:ignore="MissingClass">

            <ImageView
                android:id="@+id/im_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:src="@drawable/ic_start3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_rectangle"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_20dp"
                android:text="@string/name4"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/im_avatar" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_ripple_rectangle"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_20dp"
                android:paddingStart="@dimen/dimen_15dp"
                android:text="@string/title54"
                android:textColor="#5AFFFFFF"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:ignore="RtlSymmetry" />

            <RatingBar
                android:id="@+id/rt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="4"
                android:stepSize="1"
                android:progressBackgroundTint="#5F6271"
                android:progressTint="#FFC107"
                app:layout_constraintBottom_toTopOf="@id/tv_rate"
                app:layout_constraintLeft_toLeftOf="@id/tv_title"
                app:layout_constraintRight_toRightOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@drawable/custom_tv_yes"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:foreground="@drawable/custom_ripple_rectangle"
                android:gravity="center"
                android:padding="@dimen/dimen_20dp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tv_exit"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rt_rate" />

            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:background="@drawable/custom_tv_no_per"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/medium"
                android:foreground="@drawable/custom_ripple_rectangle"
                android:gravity="center"
                android:padding="@dimen/dimen_20dp"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/tv_rate"
                app:layout_constraintRight_toRightOf="@id/tv_rate"
                app:layout_constraintTop_toBottomOf="@id/tv_rate"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>